Fix spacing of single row cards

--- a/app/components-react/windows/MediaGallery.m.less
+++ b/app/components-react/windows/MediaGallery.m.less
@@ -15,6 +15,7 @@
   :global(.ant-card) {
     width: 150px;
     margin: 4px 2px;
+    max-height: 210px;
   }
 
   :global(.os-content) {
